[project]
name = "unitednationsofhaire"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "dj-rest-auth>=7.0.1",
    "django>=5.2.5",
    "django-allauth[socialaccount]>=65.11.1",
    "django-cors-headers>=4.7.0",
    "django-filter>=25.1",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.5",
    "si>=0.1.1.post1",
    "six>=1.17.0",
]

[dependency-groups]
dev = [
    "drf-yasg>=1.21.10",
]
