[project]
name = "unitednationsofhaire"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "asgiref>=3.9.1",
    "blinker~=1.9.0",
    "cffi>=1.17.1",
    "click~=8.1.8",
    "colorama~=0.4.6",
    "cryptography>=45.0.7",
    "dj-rest-auth>=7.0.1",
    "django>=5.2.5",
    "django-allauth[socialaccount]>=65.11.1",
    "django-cors-headers>=4.7.0",
    "django-filter>=25.1",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt==5.5.1",
    "dotenv~=0.9.9",
    "drf-yasg>=1.21.10",
    "gunicorn>=23.0.0",
    "jinja2~=3.1.6",
    "paypalrestsdk~=1.13.3",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "pycountry>=24.6.1",
    "pycparser>=2.22",
    "pygments~=2.19.2",
    "pyopenssl~=25.3.0",
    "pytest~=8.4.1",
    "python-dotenv~=1.1.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "si>=0.1.1.post1",
    "six>=1.17.0",
    "stripe>=12.5.1",
    "typing-extensions~=4.14.0",
]

[dependency-groups]
dev = [
    "cryptography>=45.0.7",
    "drf-yasg>=1.21.10",
]
